--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "and.h": "c",
     "or-8-way.h": "c",
     "nand.h": "c",
-    "mux16-8way.h": "c"
+    "mux16-8way.h": "c",
+    "half-adder.h": "c"
   }
 }
