--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "nand.h": "c",
     "mux16-8way.h": "c",
     "half-adder.h": "c",
-    "add16.h": "c"
+    "add16.h": "c",
+    "test-utils.h": "c"
   }
 }
